fix: Added gap between home page features on smaller screens

--- a/website/src/components/HomepageFeatures/styles.module.css
+++ b/website/src/components/HomepageFeatures/styles.module.css
@@ -40,3 +40,9 @@ html[data-theme='dark'] .featureSvg {
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 996px) {
+  .featuresRow {
+    gap: 2rem;
+  }
+}
